# chat-service

./: .env  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
Docker/: Dockerfile
config/logging/: logging.local.yaml
prisma/: schema.prisma
src/: main.py
src/agent/: agent.py  model.py  nodes.py  state.py
src/agents/: code_agent.py  embeddings.py  google_agent.py  supervisor_agent.py  translator_agent.py  upload_file_agent.py  user_profile_agent.py  utils.py  weather_agent.py
src/agents/tools/: common.py  memory.py  upload_file.py  user_profile.py
src/api/v1/: router.py
src/api/v1/endpoints/: chat.py  connector.py  profile.py
src/api/v1/endpoints/chat/: chat.py  chats.py  conversation.py  stream.py  upload.py  ws_chat.py
src/api/v1/endpoints/chat/handlers/: ping_handler.py  resume_handler.py  stop_handler.py  unknown_handler.py  user_message_handler.py
src/api/v1/models/: message_request.py
src/api/v1/schema/: chat.py  connector.py  profile.py
src/api/v1/schema/chat/: chat_messages_response.py  chats_response.py  conversation_message_response.py  conversation_response.py
src/config/: settings_config.py
src/core/: lifespan.py  qdrant.py  redis_manager.py
src/core/prisma/: db.py
src/enums/: chat.py  chat_role.py  connector_type.py  mcp_transport.py
src/services/: chat_service.py
src/services/v1/: chat_service.py  connectors_service.py  profile_service.py  upload_service.py
