[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = ""
authors = ["Wai Yan Min Khaing <waiyanminkhaing1997@gmail.com>"]
readme = "README.md"
packages = [
    { include = "config", from = "src" },
    { include = "agents", from = "src" },
    { include = "core", from = "src" },
    { include = "enums", from = "src" },
    { include = "middleware", from = "src" },
    { include = "db", from = "src" },
    { include = "api", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-json-logger = "^3.3.0"
pyyaml = "^6.0.2"
prometheus-client = "^0.22.1"
psutil = "^7.0.0"
langchain-mcp-adapters = "^0.1.9"
langchain-ollama = "^0.3.5"
langgraph = "^0.5.3"
fastapi = "^0.116.1"
async-lru = "^2.0.5"
langgraph-supervisor = "^0.0.27"
langmem = "^0.0.28"
langgraph-checkpoint-postgres = "^2.0.23"
prisma = "^0.15.0"
redis = "^6.2.0"
langchain-qdrant = "^0.2.0"
langchain-text-splitters = "^0.3.8"
langchain-community = "^0.3.27"
pymupdf = "^1.26.3"
aiofiles = "^24.1.0"
python-multipart = "^0.0.20"
psycopg = {extras = ["binary", "pool"], version = "^3.2.9"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}
unstructured = "^0.18.9"
networkx = "^3.5"
pandas = "^2.3.1"
msoffcrypto-tool = "^5.4.2"
openpyxl = "^3.1.5"
python-docx = "^1.2.0"
xlrd = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.13"
mypy = "^1.16.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-env = "^1.1.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
env = [
    "ENV=local",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src", "tests"]
exclude = "^src/core/prisma/generated/"

[tool.coverage.run]
omit = ["*/__init__.py", "main.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
